--- a/flechette-client/src/main/resources/application.properties
+++ b/flechette-client/src/main/resources/application.properties
@@ -5,4 +5,4 @@ rampup.timeunit=MINUTES
 execution.period=2000
 execution.period.timeunit=MILLISECONDS
 
-logging.level.com.vosmann.flechette=DEBUG
+logging.level.com.vosmann.flechette=INFO
