--- a/flechette-client/pom.xml
+++ b/flechette-client/pom.xml
@@ -5,7 +5,7 @@
 
     <groupId>com.vosmann.flechette</groupId>
     <artifactId>flechette-client</artifactId>
-    <version>1.0-SNAPSHOT</version>
+    <version>1.0-CLIENT-SNAPSHOT</version>
 
     <properties>
         <spring.boot.version>1.3.2.RELEASE</spring.boot.version>
@@ -29,6 +29,11 @@
             <version>${spring.boot.version}</version>
         </dependency>
         <dependency>
+            <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-starter-actuator</artifactId>
+            <version>${spring.boot.version}</version>
+        </dependency>
+        <dependency>
             <groupId>io.dropwizard.metrics</groupId>
             <artifactId>metrics-core</artifactId>
             <version>${metrics.version}</version>
@@ -47,6 +52,11 @@
             <groupId>org.hyperic</groupId>
             <artifactId>sigar</artifactId>
             <version>1.6.4</version>
+        </dependency>
+        <dependency>
+            <groupId>org.jolokia</groupId>
+            <artifactId>jolokia-core</artifactId>
+            <version>1.3.3</version>
         </dependency>
         <dependency>
             <groupId>junit</groupId>
