--- a/flechette-client/src/main/resources/application.properties
+++ b/flechette-client/src/main/resources/application.properties
@@ -7,3 +7,4 @@ rampup.time=5
 rampup.timeunit=MINUTES
 execution.period=2000
 execution.period.timeunit=MILLISECONDS
+allowed.workers=old,default,long,idle,longIdle,restTemplateDefault
