--- a/flechette-server/flechette-server.yaml
+++ b/flechette-server/flechette-server.yaml
@@ -36,7 +36,7 @@ SenzaComponents:
   - AppLoadBalancer:
       Type: Senza::WeightedDnsElasticLoadBalancer
       HTTPPort: 11000
-      HealthCheckPath: /
+      HealthCheckPath: /health
       SecurityGroups:
         - app-flechette-server-lb
       Scheme: internet-facing
