--- a/flechette-client/src/main/resources/application.properties
+++ b/flechette-client/src/main/resources/application.properties
@@ -7,4 +7,7 @@ rampup.time=5
 rampup.timeunit=MINUTES
 execution.period=2000
 execution.period.timeunit=MILLISECONDS
-allowed.workers=old,default,long,idle,longIdle,restTemplateDefault
+allowed.workers=old,default,long,idle,longIdle,restTemplateDefault,bigPoolRestTemplate,smallTimeoutRestTemplate
+
+timeout.connect=1000
+timeout.read=100
